# Prism

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: PRISM_ARCHITECTURE.md  PRISM_BACKLOG.md  PRISM_SCOPE_REFERENCE.md  PRISM_SRS.md  PRISM_TECH_STACK.md
src/: main.rs
