[package]
name = "prism"
version = "0.1.0"
edition = "2021"
description = "Prism: enterprise complexity management companion for one-person governance of very large codebases."
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
sha2 = { version = "0.10", features = ["std"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[profile.release]
strip = "symbols"
